# sharingan-eyes

./: .gitignore  BUILDING.md  BUILD_FLASH.md  CHANGELOG.md  CMakeLists.txt  HANDOFF_PLAN.md  PORTING.md  README.md  VIDEO_PLAN.md  anim.eyv  anim2.eyv  anim3.eyv  anim_rennegan2_lr.eyv  anim_rinnegan-l-r.eyv  anim_sharingan-l-r.eyv  anim_sharingan21.eyv  board.txt  claude_code_chat.md  instructions.md  old.sdkconfig.lcd_1_28  pack.eyp  rinnegan_rotated_open_close.eyv  sdkconfig.amoled_2_06  sdkconfig.lcd_1_28  sharingan-rinnegan-morph.eyv  sharingan-rinnegan-morph_rotatedkkjk.eyv
boards/amoled_2_06/: partitions.csv  sdkconfig.defaults
boards/amoled_2_06/main/: CMakeLists.txt  app_main.c  eye_battery_axp2101.c  eye_display_amoled.c  idf_component.yml
boards/lcd_1_28/: partitions.csv  sdkconfig.defaults
boards/lcd_1_28/main/: CMakeLists.txt  app_main.c  eye_battery_adc.c  eye_display_gc9a01.c  idf_component.yml
components/eye_core/: CMakeLists.txt  eye_battery.h  eye_clip_params.c  eye_clip_params.h  eye_config.h  eye_console.c  eye_console.h  eye_demo.c  eye_demo.h  eye_display.h  eye_font.h  eye_imu.c  eye_imu.h  eye_info.c  eye_info.h  eye_params.c  eye_params.h  eye_scene.c  eye_scene.h  eye_ui.h  eye_video.c  eye_video.h  idf_component.yml
components/eye_ui_lvgl/: CMakeLists.txt  eye_ui_lvgl.c  idf_component.yml
components/eye_web/: CMakeLists.txt  eye_net.c  eye_net.h  eye_sync.c  eye_sync.h  eye_webserver.c  eye_webserver.h  idf_component.yml  wifi_ctrl.c  wifi_ctrl.h  wifi_portal.c  wifi_portal.h
components/eye_web/web_ui/: index.html
hardware/: eye_assembly.step  eye_case.step  eye_case.stl  generate_eye_parts.py  lens_48x14_plano_convex.step  lens_48x14_plano_convex.stl  watch_amoled_2_06.step  watch_amoled_2_06.stl
tools/: eye_animator.py  eye_effects.py  eye_manager.py  eye_studio.py  flash_clip.ps1  gen_font.py  launch_manager.bat  make_anim.py  make_pack.py  requirements.txt
tools/eye_render/: __init__.py  geometry.py  patterns.py  pipeline.py  timeline.py
